app/assets/stylesheets/overall.scss
/* OVERALL STYLES */

* {
  font-family: 'Open Sans', sans-serif !important;
  margin: 0px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.hidden {
  display: none;
}

table {
  width: 100%;
}

body {
  background-color: $backgroud;
}

.info-area {
  width: 80%;
  margin: auto auto;
  background-color: $white;
  border-radius: 9px;
  padding: 30px;
  border: solid 1px $light-line;
  margin-top: 30px;
  margin-bottom: 50px;
}

.index .info-area {
    margin-top: 0;
}

.low {
    background-color: $low;
}

.medium {
    background-color: $medium;
}

.high {
    background-color: $high;
}

.blue {
  background-color: $warning-bubble;
}

